# Domotica-Project

./: .gitignore  .mergify.yml  .travis.yml  ArdunoARest.nswag  README.md
App/: HelloApp.sln  Project_Green.sln
App/HelloApp/HelloApp/: App.xaml.cs  CustomViewCell.cs  DatabaseManager.cs  HelloApp.csproj  IDBInterface.cs  ListPage.xaml  ListPage.xaml.cs  MainPage.xaml  MainPage.xaml.cs
App/HelloApp/HelloApp.Android/: CustomViewCellRenderder.cs  DatabaseService.cs  HelloApp.Android.csproj  MainActivity.cs
App/Project_Green/: App.xaml  App.xaml.cs  ArdunoRest.cs  ChartData.cs  Configuration.cs  DatabaseManager.cs  GreenhouseData.db  IDBInterface.cs  IPScanner.cs  Project_Green.csproj  Project_Green.sln  SettingsMeister.cs  StatMeister.cs
App/Project_Green.Android/: DatabaseService.cs  Project_Green.Android.csproj
App/Project_Green.Android/Assets/: GreenhouseData.db
App/Project_Green.Android/Resources/: Resource.designer.cs
App/Project_Green/Models/: Greenhouse.cs  Sensor.cs  SensorYaml.cs
App/Project_Green/Project_Green/: App.xaml.cs  Project_Green.csproj
App/Project_Green/Views/: ChartPage.xaml  ChartPage.xaml.cs  MainPage.xaml  MainPage.xaml.cs  RealTime.xaml  RealTime.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
Arduino/: .gitignore  CMakeLists.txt  platformio.ini
Arduino/src/: DHT_imp.cpp  DHT_imp.h  DataStorage.cpp  DataStorage.h  DateTime.cpp  DateTime.h  FileServe.cpp  FileServe.h  Prerequisites.h  REST_Endpoints.cpp  REST_Endpoints.h  main.cpp
Documents/: greenhouse_schematic.fzz
Test/: CMakeLists.txt  TEST.TXT  main.cs  packages.config
(+34 files in other folders)
